--- a/bookmarker-api/src/main/resources/application.properties
+++ b/bookmarker-api/src/main/resources/application.properties
@@ -2,3 +2,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 spring.flyway.locations=classpath:db/migration/{vendor}
+
+management.endpoints.web.exposure.include = *
+
+management.health.defaults.enabled=true
+
+management.endpoint.health.show-details=ALWAYS
+management.endpoint.health.probes.enabled=true
