Adding github actions workflow.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,9 +10,12 @@ on:
     branches: [ "master" ]
 
 jobs:
-  build:
-
+  build-bookmarker-api:
+    name: Build project
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./bookmarker-api
 
     steps:
     - uses: actions/checkout@v3
