Adding github actions workflow.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,5 +32,5 @@ jobs:
       name: Build and publish docker
       run: |
         mvn clean install jib:dockerBuild -DskipTests
-        docker login -u ${{secrets:DOCKER_USERNAME}} -P ${{secrets.DOCKER_PASSWORD}}
+        docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
         docker push ${{secrets.DOCKER_USERNAME}}/bookmarker-api
