--- a/bookmarker-api/pom.xml
+++ b/bookmarker-api/pom.xml
@@ -85,6 +85,11 @@
             <artifactId>micrometer-registry-prometheus</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.zalando</groupId>
+            <artifactId>problem-spring-web-starter</artifactId>
+            <version>0.27.0</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
